--- a/app/src/main/res/layout/activity_farm_info.xml
+++ b/app/src/main/res/layout/activity_farm_info.xml
@@ -7,17 +7,13 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_weight="0.5"
-            android:orientation="vertical">
-
-        </LinearLayout>
+        android:layout_width="350dp"
+        android:layout_height="500dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navi"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/li_back_fPw">
 
         <TextView
             android:id="@+id/tv_fInfo"
@@ -31,15 +27,17 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="0.3"
-            android:background="@drawable/edit_text_bg">
+            android:background="@drawable/edit_text_bg"
+            android:gravity="center">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/cardview_compat_inset_shadow"
-                android:layout_weight="0.5"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
                 android:text="기계넘버"
@@ -48,10 +46,8 @@
             <TextView
                 android:id="@+id/tv_serial"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:background="@drawable/edit_text_bg"
-                android:drawablePadding="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:ems="10"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
@@ -62,26 +58,27 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="0.3"
             android:background="@drawable/edit_text_bg">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
                 android:text="하우스 수"
                 android:textSize="30sp" />
 
-            <EditText
-                android:id="@+id/edt_houseNum"
+            <TextView
+                android:id="@+id/tv_houseNum"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/edit_text_bg"
-                android:drawablePadding="10dp"
                 android:ems="10"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
@@ -94,13 +91,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"
             android:layout_weight="0.3"
             android:background="@drawable/edit_text_bg">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
@@ -110,117 +109,75 @@
             <EditText
                 android:id="@+id/edt_lineNum"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:background="@drawable/edit_text_bg"
-                android:drawablePadding="10dp"
                 android:ems="10"
-                android:fontFamily="@font/henam"
                 android:gravity="center"
-                android:hint="입력하세요!"
+                android:hint="3"
                 android:inputType="textPersonName"
                 android:textColor="@color/text_hint"
                 android:textColorHint="@color/text_hint"
                 android:textSize="30sp" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="50dp"
             android:layout_weight="0.5"
             android:background="@drawable/edit_text_bg">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
                 android:text="구역 수"
                 android:textSize="30sp" />
 
-            <EditText
-                android:id="@+id/edt_areaNum"
+            <TextView
+                android:id="@+id/tv_areaNum"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:background="@drawable/edit_text_bg"
-                android:drawablePadding="10dp"
                 android:ems="10"
-                android:fontFamily="@font/henam"
                 android:gravity="center"
-                android:hint="입력하세요!"
+                android:hint="6"
                 android:inputType="textPersonName"
-                android:textColor="@color/text_hint"
                 android:textColorHint="@color/text_hint"
                 android:textSize="30sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_weight="0.5"
-            android:background="@drawable/edit_text_bg">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:fontFamily="@font/henam"
-                android:gravity="center"
-                android:textSize="30sp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="20dp"
+            android:layout_gravity="center|center_horizontal"
             android:layout_weight="0.5">
-
-            <LinearLayout
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
-
-            <Button
-                android:id="@+id/btn_refresh_fInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/henam"
-                android:text="갱신하기" />
-
-            <LinearLayout
-                android:layout_width="30dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
 
             <Button
                 android:id="@+id/btn_updateFarmInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/henam"
-                android:text="수정하기" />
-
-            <LinearLayout
-                android:layout_width="30dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/henam"
+                android:text="수정완료"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/li_back_fPw"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -229,7 +186,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/img_back_fInfo"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
