--- a/app/src/main/res/layout/activity_reservation_list.xml
+++ b/app/src/main/res/layout/activity_reservation_list.xml
@@ -7,7 +7,7 @@
     tools:context=".Reservation_list">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/li_back_fPw"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:layout_marginTop="104dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/li_back_fPw" />
 
     <TextView
         android:id="@+id/textView23"
@@ -69,7 +69,7 @@
         android:text="시간"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/li_back_fPw" />
 
     <ImageView
         android:id="@+id/img_rsv"
@@ -104,6 +104,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/li_back_fPw" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
