--- a/app/src/main/res/layout/activity_my_farm.xml
+++ b/app/src/main/res/layout/activity_my_farm.xml
@@ -64,7 +64,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_realTime1"
+                    android:id="@+id/tv_mypage"
                     android:layout_width="159dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/henam"
